# hex_snake

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: error.rs  game.rs  keyboard.rs  keyboard_layout.rs  main.rs  oklab.rs  partial_min_max.rs  point.rs  row.rs  times.rs
src/app/: app_error.rs  apple_spawn_strategy.rs  collision_detection.rs  collisions.rs  control.rs  distance_grid.rs  drawing.rs  fps_control.rs  game_context.rs  guidance.rs  hex.rs  keyboard_control.rs  message.rs  mod.rs  palette.rs  prefs.rs  snake.rs  snake_management.rs  start_screen.rs  stats.rs  utils.rs
src/app/apple/: mod.rs  spawn.rs  spawning.rs
src/app/game/: effect.rs  game_control.rs  message.rs  mod.rs
src/app/portal/: draw.rs  mod.rs
src/app/rendering/: apple_mesh.rs  grid_mesh.rs  mod.rs  snake_mesh.rs
src/app/screen/: apple.rs  board_dim.rs  control.rs  debug_scenario.rs  game.rs  mod.rs  prefs.rs  start_screen.rs  stats.rs
src/app/snake/: controller.rs  demo_controller.rs  eat_mechanics.rs  mod.rs  (+6 more)
src/apple/: mod.rs  spawn.rs
src/basic/: board.rs  cell_dim.rs  dir.rs  dir12.rs  hex_point.rs  mod.rs  point.rs  transformations.rs
src/button/: mod.rs
src/color/: mod.rs  oklab.rs  to_color.rs
src/game/: ctrl.rs  ctrl_settings.rs  effect.rs  hex.rs  hex_grid_point.rs  mod.rs  palette.rs  snake.rs
src/pathfinding/: a_star.rs  mod.rs
src/rendering/: apple_mesh.rs  button_mesh.rs  clean_arc.rs  grid_mesh.rs  mod.rs  player_path_mesh.rs  portal_mesh.rs  snake_mesh.rs
src/snake/: builder.rs  eat_mechanics.rs  mod.rs  palette.rs
src/snake_control/: a_star.rs  algorithm.rs  breadth_first.rs  competitor1.rs  competitor2.rs  keyboard.rs  keyboard_clock.rs  killer.rs  mod.rs  mouse.rs  programmed.rs  rain.rs
src/support/: copied2.rs  filter_scan.rs  flip.rs  invert.rs  limits.rs  map_with_default.rs  mod.rs  partial_min_max.rs  row.rs  text_layout.rs
src/view/: mod.rs  targets.rs
(+58 files in other folders)
