[package]
name = "hex_snake"
version = "0.1.0"
authors = ["gorilskij <43991400@users.noreply.github.com>"]
edition = "2021"

[dependencies]
ggez = "0.7"
rand = "~0.7"
itertools = "0.10"
derive_more = "~0.99"
num-integer = "~0.1"
hsl = "0.1.1"
lazy_static = "1.4.0"
itertools-num = "0.1.3"
num-traits = "0.2"
ezing = "0.2.1"
lyon_geom = "0.17"
#derive_builder = "0.11.2"
rayon = "1.5.2"
static_assertions = "1.1.0"
# local dependencies
map_with_state = { path = "../map_with_state" }

[profile.release]
debug = true
