[package]
name = "hex_snake"
version = "0.1.0"
authors = ["gorilskij <43991400@users.noreply.github.com>"]
edition = "2021"

[dependencies]
#ggez = "0.8"
ggez = { git = "https://github.com/ggez/ggez", rev = "81544de" }
rand = "0.8"
itertools = "0.10"
itertools-num = "0.1.3"
derive_more = "~0.99"
num-integer = "~0.1"
hsl = "0.1.1"
lazy_static = "1.4.0"
num-traits = "0.2"
ezing = "0.2.1"
lyon_geom = "1.0.4"
rayon = "1.5.2"
static_assertions = "1.1.0"
thiserror = "1.0.38"
# local dependencies
tap = "1.0.1"
# TODO: publish all local dependencies before merging into master
map_with_state = { path = "../map_with_state" }
enum_rotate = { path = "../enum_rotate" }

[profile.release]
debug = true
